--- a/src/app/components/dataview/dataview.component.css
+++ b/src/app/components/dataview/dataview.component.css
@@ -23,6 +23,10 @@
   margin: 2rem 0;
 }
 
+.game-grid-item-content .p-rating {
+  margin: 0 0 0.5rem 0;
+}
+
 .game-name {
   font-size: 1.5rem;
   font-weight: 700;
