--- a/src/app/components/dataview/dataview.component.html
+++ b/src/app/components/dataview/dataview.component.html
@@ -1,7 +1,6 @@
-<p>dataview works!</p>
 
 <div class="card">
-  <p-dataView #dv [value]="games" [paginator]="true" [rows]="9" filterBy="name" layout="grid">
+  <p-dataView #dv [value]="games" [paginator]="true" [rows]="6" filterBy="name" layout="grid">
     <ng-template let-game pTemplate="gridItem">
       <div class="p-col-12 p-md-4">
         <div class="game-grid-item card">
@@ -16,8 +15,8 @@
             <img *ngIf="game.background_image" src="{{ game.background_image }}" alt="{{ game.name }}" />
             <p *ngIf="!game.background_image">No image</p>
             <div class="game-name">{{ game.name }}</div>
-            <!-- <div class="product-description">{{ product.description }}</div>
-            <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating> -->
+            <!-- <div class="product-description">{{ product.description }}</div>  -->
+            <p-rating [ngModel]="game.rating" [readonly]="true" [cancel]="false"></p-rating>
           </div>
           <!-- <div class="product-grid-item-bottom">
             <span class="product-price">${{ product.price }}</span>
